--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <title>Vite + React</title>
+    <title>Countries</title>
   </head>
   <body>
     <div id="root"></div>
